添加一条脚手架commond

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,9 @@
   "author": "cainiaodjm <cainiaodjm@163.com>",
   "homepage": "",
   "license": "ISC",
+  "bin": {
+    "core-init": "bin/index.js"
+  },
   "main": "lib/core.js",
   "directories": {
     "lib": "lib",
@@ -15,5 +18,6 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "3c850be06b7f43402ccacbdd40a2b01f9addec35"
 }
